# prime_finder

./: Cargo.toml  LICENSE  README.md  finder.py  main.py  pyproject.toml
prime_finder/: finder.py
src/: lib.rs
